<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_drawable"
    tools:context=".activity.CadastroActivity">


    <ImageView
        android:id="@+id/imageViewPerfil"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo" />


    <EditText
        android:id="@+id/editTextNome"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/nome_hint"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:minHeight="48dp"
        android:padding="8dp"
        android:shadowColor="@color/white"
        android:textColor="#FFFFFF"
        android:textColorHighlight="@color/colorSilver"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPerfil" />

    <EditText
        android:id="@+id/editTextEmail"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/e_mail_hint"
        android:inputType="textEmailAddress"
        android:maxLength="25"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="8dp"
        android:shadowColor="@color/white"
        android:textColor="#FFFFFF"
        android:textColorHighlight="@color/colorSilver"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/senha_hint"
        android:inputType="textPassword"
        android:maxLength="10"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="8dp"
        android:shadowColor="@color/white"
        android:textColor="#FFFFFF"
        android:textColorHighlight="@color/colorSilver"
        android:textColorHint="@color/white"
        app:rippleColor="#B15CBF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />


    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/background_edit_text"
        android:backgroundTint="@color/purple_200"
        android:elevation="4dp"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="4dp"
        android:shadowColor="#6A9C3E"
        android:text="@string/cadastrar_txt_btn"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:rippleColor="#B15CBF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <ProgressBar
        android:id="@+id/progressBarCad"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:progressTint="#2167F3"
        android:theme="@style/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCadastrar" />

</androidx.constraintlayout.widget.ConstraintLayout>