<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_drawable"
    tools:context=".activity.LoguinActivity">

    <ImageView
        android:id="@+id/imageViewPerfil"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginTop="130dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editTextEmail"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/e_mail_hint"
        android:inputType="textEmailAddress"
        android:maxLength="25"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="8dp"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/colorSilver"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPerfil" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/senha_hint"
        android:inputType="textPassword"
        android:maxLength="10"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="8dp"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHighlight="@color/colorSilver"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/buttonLogar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/background_edit_text"
        android:backgroundTint="@color/purple_200"
        android:elevation="4dp"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="4dp"
        android:shadowColor="#6A9C3E"
        android:text="@string/entrar_btnLog"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:rippleColor="#B15CBF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <!--        android:onClick="cadastreSeActivity"-->
    <TextView
        android:id="@+id/textViewCadastre"
        style="@android:style/Widget.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:elevation="3dp"
        android:gravity="center"
        android:minHeight="18dp"
        android:text="@string/cadastre_se"
        android:onClick="cadastreSeActivity"
        android:textColor="@color/teal_200"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogar"
        tools:ignore="TouchTargetSizeCheck" />

    <ProgressBar
        android:id="@+id/progressBarLog"
        style="?android:attr/progressBarStyle"
        android:theme="@style/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:progressTint="#2167F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCadastre" />

</androidx.constraintlayout.widget.ConstraintLayout>